--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -9,7 +9,8 @@ bin.includes = META-INF/,\
                lib/commons-collections-3.2.1/commons-collections-3.2.1.jar,\
                lib/guava-12.0.jar,\
                plugin.properties,\
-               LICENSE-2.0.html
+               LICENSE-2.0.html,\
+               lib/guice-3.0/javax.inject.jar
 jars.compile.order = .
 output../ = bin/
 source../ = src/
