I resolved warnings stemming from missing or from bin.include resources.

--- a/de.hub.emffrag.testmodels/build.properties
+++ b/de.hub.emffrag.testmodels/build.properties
@@ -13,7 +13,8 @@
 # limitations under the License.
 
 bin.includes = .,\
-               model/,\
+               models/,\
+               metamodels/,\
                META-INF/,\
                plugin.properties
 jars.compile.order = .
