--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -1,16 +1,22 @@
+# Copyright 2012 Markus Scheidgen
+# 
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+#     http://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
-# <copyright>
-# </copyright>
-#
-# $Id$
 
-bin.includes = META-INF/,\
-               lib/guice-3.0/guice-3.0.jar,\
-               lib/commons-collections-3.2.1/commons-collections-3.2.1.jar,\
-               lib/guava-12.0.jar,\
+bin.includes = .,\
+               metamodels/,\
                plugin.properties,\
-               LICENSE-2.0.html,\
-               lib/guice-3.0/javax.inject.jar
+               META-INF/
 jars.compile.order = .
-output../ = bin/
-source../ = src/
+source.. = src/
+output.. = bin/
