--- a/de.hub.emffrag.hbase/.classpath
+++ b/de.hub.emffrag.hbase/.classpath
@@ -20,9 +20,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-net-1.4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/core-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-r09.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/hadoop-core-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hadoop-core-1.0.2.jar" sourcepath="/de.hub.hadooptest"/>
 	<classpathentry exported="true" kind="lib" path="lib/hbase-0.94.0-tests.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/hbase-0.94.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hbase-0.94.0.jar" sourcepath="/de.hub.hadooptest/hbase"/>
 	<classpathentry exported="true" kind="lib" path="lib/high-scale-lib-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.3.jar"/>
