Minor refactorings. Added a few test-cases to CacheTests. Bugfixes in caching. User objects use now weak references to reference a container. Added apache commons codec library, not used it yet (intended for encoding URI segments).

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -16,7 +16,8 @@
 bin.includes = .,\
                metamodels/,\
                plugin.properties,\
-               META-INF/
+               META-INF/,\
+               lib/commons-codec-1.7/commons-codec-1.7.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
