--- a/de.hub.emffrag/.classpath
+++ b/de.hub.emffrag/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.7/commons-codec-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guice-3.0/javax.inject.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-12.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1/commons-collections-3.2.1.jar"/>
