OPEN - task 3: Index-Maps http://github.com/markus1978/emf-fragments/issues/issue/3
- simplified the EMF-Fragments meta-model that defines the index map
interface
- implemented the `IndexedMap` (but not `#iterator(K,K)`)
- added necessary auxiliary functionality to `FragmentedModel`
- added a first test case ... more need to follow

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -12,12 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
 bin.includes = .,\
-               metamodels/,\
-               plugin.properties,\
-               META-INF/,\
-               lib/commons-codec-1.7/commons-codec-1.7.jar
+               model/,\
+               plugin.xml,\
+               plugin.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
