--- a/de.hub.emffrag/.classpath
+++ b/de.hub.emffrag/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.7/commons-codec-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guice-3.0/javax.inject.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-12.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-12.0.jar" sourcepath="/Users/markus/.m2/repository/com/google/guava/guava/12.0/guava-12.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1/commons-collections-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guice-3.0/guice-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
