OPEN - task 7: Indexed-maps with containment http://github.com/markus1978/emf-fragments/issues/issue/7
added functionality for Indexed-maps with containment.
added tests for Indexed-maps with containment.
updated fragmentation functionality accordingly.
updated `FragmentsBaseTestSuite`.

--- a/de.hub.emffrag.testmodels/build.properties
+++ b/de.hub.emffrag.testmodels/build.properties
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 bin.includes = .,\
-               model/,\
+               models/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
