OPEN - task 8: Add a mongodb adapter http://github.com/markus1978/emf-fragments/issues/issue/8
Added the mongodb adapter and corresponding testcases.

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -13,9 +13,10 @@
 # limitations under the License.
 
 bin.includes = .,\
-               model/,\
+               metamodels/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               META-INF/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
