--- a/de.hub.emffrag/plugin.xml
+++ b/de.hub.emffrag/plugin.xml
@@ -17,28 +17,11 @@
  limitations under the License.
 -->
 
-<plugin
-      name="%pluginName"
-      id="de.hub.emffrag"
-      version="1.0.0"
-      provider-name="%providerName">
-
-   <requires>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.emf.ecore" export="true"/>
-   </requires>
-
-   <runtime>
-      <library name=".">
-         <export name="*"/>
-      </library>
-   </runtime>
-
+<plugin>
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://de.hub.emffrag/emffrag"
             class="de.hub.emffrag.model.emffrag.EmfFragPackage"
             genModel="metamodels/emffrag.genmodel"/>
    </extension>
-
 </plugin>
