--- a/de.hub.emffrag.editor/plugin.xml
+++ b/de.hub.emffrag.editor/plugin.xml
@@ -32,6 +32,7 @@
       <import plugin="org.eclipse.emf.edit.ui" export="true"/>
       <import plugin="org.eclipse.ui.ide" export="true"/>
       <import plugin="de.hub.emffrag.testmodels" version="1.0.0"/>
+      <import plugin="de.hub.srcrepo" version="1.0.0"/>
    </requires>
 
    <runtime>
@@ -64,6 +65,7 @@
             class="de.hub.emffrag.model.emffrag.presentation.EmfFragEditor"
             contributorClass="de.hub.emffrag.model.emffrag.presentation.EmfFragActionBarContributor">
       </editor>
+      
    </extension>
 
 </plugin>
