OPEN - task 17: Editor/View http://github.com/markus1978/emf-fragments/issues/issue/17
Added an ItemProviderAdaptor that can be used as an base class for
generated provider classes. This adapter allows to visualize fragment
roots, attributes, and references. More feature could be added in the
future.

Added a test case for the persistence of extrinsic IDs.

--- a/de.hub.emffrag.edit/plugin.xml
+++ b/de.hub.emffrag.edit/plugin.xml
@@ -28,6 +28,7 @@
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="de.hub.emffrag" export="true"/>
       <import plugin="org.eclipse.emf.edit" export="true"/>
+      <import plugin="org.eclipse.ui" version="3.7.0"/>
    </requires>
 
    <runtime>
