OPEN - task 6: Model extensions http://github.com/markus1978/emf-fragments/issues/issue/6
Added the extension mechanism.
Added a first extension for statistics. 
If statistics are recorded or not is configuratbale through the
`EmfFragActivator`.

--- a/de.hub.emffrag.edit/plugin.properties
+++ b/de.hub.emffrag.edit/plugin.properties
@@ -39,3 +39,6 @@ _UI_IndexedMap_keytype_feature = Keytype
 _UI_Root_contents_feature = Contents
 _UI_Unknown_feature = Unspecified
 
+_UI_Statistics_type = Statistics
+_UI_Statistics_accessed_feature = Accessed
+_UI_Statistics_loaded_feature = Loaded
