--- a/org.apache.hadoop.hbase/.classpath
+++ b/org.apache.hadoop.hbase/.classpath
@@ -18,12 +18,12 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-math-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-net-1.4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-3.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-3.1.1.jar" sourcepath="/org.eclipse.jdt.core"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hadoop-core-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/high-scale-lib-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.3.jar" sourcepath="/Users/markus/.m2/repository/org/apache/httpcomponents/httpcore/4.1.3/httpcore-4.1.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-core-asl-1.8.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-jaxrs-1.8.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-mapper-asl-1.8.8.jar"/>
