--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -16,7 +16,8 @@ bin.includes = .,\
                metamodels/,\
                plugin.xml,\
                plugin.properties,\
-               META-INF/
+               META-INF/,\
+               lib/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
