--- a/de.hub.emffrag.testmodels/build.properties
+++ b/de.hub.emffrag.testmodels/build.properties
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 bin.includes = .,\
-               models/,\
+               metamodels/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
