Lots of changes, trying to get it to work. Not really successful. Seperated UUIDBinaryResources and AccessNotifyingEObject into seperate implementations. Will have to continue to seperate full unload/relead from auto caching from fragmentation.

--- a/de.hub.emffrag.testmodels/plugin.xml
+++ b/de.hub.emffrag.testmodels/plugin.xml
@@ -33,4 +33,68 @@
             genModel="metamodels/TestMM.genmodel"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated TestMM_access -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.testmodel.access.meta.TestModelPackage"
+            genModel="metamodels/TestMM_access.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated TestMM_regular -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.regular.testmodel.meta.TestModelPackage"
+            genModel="metamodels/TestMM_regular.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated TestMM_fObject -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.fobject.testmodel.meta.TestModelPackage"
+            genModel="metamodels/TestMM_fObject.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated TestMM_frag -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.frag.testmodel.meta.TestModelPackage"
+            genModel="metamodels/TestMM_frag.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated eObject.fObjectImpl.testmodel -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.eobject.testmodel.fobject.meta.TestModelPackage"
+            genModel="metamodels/eObject.fObjectImpl.testmodel.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated testmodel.fobject.fobject -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.fobject.testmodel.fobject.meta.TestModelPackage"
+            genModel="metamodels/testmodel.fobject.fobject.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated testmodel.eobject.eobject -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.eobject.testmodel.eobject.meta.TestModelPackage"
+            genModel="metamodels/testmodel.eobject.eobject.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated testmodel.eobject.accessnot -->
+      <package
+            uri="http://hu-berlin.de/sam/emfhbase/testmodel"
+            class="de.hub.emffrag.testmodels.eobject.testmodel.accessnot.meta.TestModelPackage"
+            genModel="metamodels/testmodel.eobject.accessnot.genmodel"/>
+   </extension>
+
 </plugin>
