Lots of small fixes.

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -17,7 +17,8 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                META-INF/,\
-               lib/
+               lib/,\
+               lib/commons-lang3-3.3.2/commons-lang3-3.3.2.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
