Removed static dependencies and added ivy. Added some lighweight statistics support and reporting.

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -12,13 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-bin.includes = .,\
-               metamodels/,\
+bin.includes = metamodels/,\
                plugin.xml,\
                plugin.properties,\
                META-INF/,\
-               lib/,\
-               lib/commons-lang3-3.3.2/commons-lang3-3.3.2.jar
+               lib/
 jars.compile.order = .
-source.. = src/
 output.. = bin/
