--- a/de.hub.emffrag/.classpath
+++ b/de.hub.emffrag/.classpath
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.3.2/commons-lang3-3.3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.7/commons-codec-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guice-3.0/javax.inject.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-12.0.jar" sourcepath="lib/guava-12.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1/commons-collections-3.2.1.jar" sourcepath="lib/commons-collections-3.2.1/commons-collections-3.2.1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guice-3.0/guice-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=de.hub.emffrag&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
