--- a/de.hub.emffrag/ivy.xml
+++ b/de.hub.emffrag/ivy.xml
@@ -24,6 +24,7 @@
         module="emffrag"
         status="integration">
 	</info>
+	<retrieve pattern="${dist.dir}/lib/[artifact].[ext]" conf="runtime"/>
 	<dependencies>
 		<dependency org="com.google.guava" name="guava" rev="18.0"/>
 		<dependency org="commons-codec" name="commons-codec" rev="1.10"/>
