--- a/de.hub.emffrag.mongodb/.classpath
+++ b/de.hub.emffrag.mongodb/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/mongo-2.10.1.jar" sourcepath="/Users/markus/.m2/repository/org/mongodb/mongo-java-driver/2.10.1/mongo-java-driver-2.10.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/jsr305-1.3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/mongo-java-driver-2.13.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bundles/guava-18.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
