--- a/de.hub.emffrag.mongodb/build.properties
+++ b/de.hub.emffrag.mongodb/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               libs/mongo-2.10.1.jar
+               bin/,\
+               lib/bundles/guava-18.0.jar,\
+               lib/jars/jsr305-1.3.9.jar,\
+               lib/jars/mongo-java-driver-2.13.2.jar
