--- a/de.hub.emffrag/.classpath
+++ b/de.hub.emffrag/.classpath
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/bundles/guava-18.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/aopalliance-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/asm-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/cglib-2.2.1-v20090111.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/commons-codec-1.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/commons-collections-3.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/commons-lang3-3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/guice-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/javax.inject-1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/jsr305-1.3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/commons-math3-3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
