--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -16,6 +16,18 @@ bin.includes = metamodels/,\
                plugin.xml,\
                plugin.properties,\
                META-INF/,\
-               lib/
+               lib/,\
+               bin/,\
+               lib/jars/commons-math3-3.5.jar,\
+               lib/jars/aopalliance-1.0.jar,\
+               lib/jars/asm-3.1.jar,\
+               lib/jars/cglib-2.2.1-v20090111.jar,\
+               lib/jars/commons-codec-1.10.jar,\
+               lib/jars/commons-collections-3.2.1.jar,\
+               lib/jars/commons-lang3-3.4.jar,\
+               lib/jars/guice-3.0.jar,\
+               lib/jars/javax.inject-1.jar,\
+               lib/jars/jsr305-1.3.9.jar,\
+               lib/bundles/guava-18.0.jar
 jars.compile.order = .
 output.. = bin/
