--- a/de.hub.emffrag/.classpath
+++ b/de.hub.emffrag/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/bundles/guava-18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/aopalliance-1.0.jar"/>
