Lots of small fixes. Better adaptive gc. Lots of errors still in it.

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -12,9 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-bin.includes = metamodels/,\
-               plugin.xml,\
-               plugin.properties,\
+bin.includes = plugin.properties,\
                META-INF/,\
                lib/,\
                bin/,\
@@ -31,3 +29,4 @@ bin.includes = metamodels/,\
                lib/bundles/guava-18.0.jar
 jars.compile.order = .
 output.. = bin/
+jre.compilation.profile = JavaSE-1.6
