--- a/de.hub.emffrag.testmodels/build.properties
+++ b/de.hub.emffrag.testmodels/build.properties
@@ -18,5 +18,6 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = gen-src/
+source.. = gen-src/,\
+           src/
 output.. = bin/
