Bugfixes. FragmentationSet and cross fragmentation functionality and tests.

--- a/de.hub.emffrag/build.properties
+++ b/de.hub.emffrag/build.properties
@@ -30,3 +30,5 @@ bin.includes = plugin.properties,\
 jars.compile.order = .
 output.. = bin/
 jre.compilation.profile = JavaSE-1.6
+bin.excludes = lib/sources/,\
+               lib/javadocs/
