Ignored xtend-gen.

--- a/de.hub.emffrag4.tests/build.properties
+++ b/de.hub.emffrag4.tests/build.properties
@@ -6,5 +6,7 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = gen-src/
+source.. = gen-src/,\
+           src/,\
+           xtend-gen/
 output.. = bin/
