--- a/de.hub.emffrag4/.classpath
+++ b/de.hub.emffrag4/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/jars/commons-codec-1.10.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/bundles/guava-19.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bundles/guava-19.0.jar" sourcepath="lib/sources/guava-19.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/animal-sniffer-annotations-1.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/error_prone_annotations-2.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/j2objc-annotations-0.1.jar"/>
