--- a/de.hub.emffrag4.tests/.classpath
+++ b/de.hub.emffrag4.tests/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="gen-src"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/commons-lang-2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/colt-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/concurrent-1.3.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
