--- a/de.hub.emffrag4.tests/build.properties
+++ b/de.hub.emffrag4.tests/build.properties
@@ -4,7 +4,10 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               lib/jars/colt-1.2.0.jar,\
+               lib/jars/concurrent-1.3.4.jar,\
+               lib/jars/commons-lang-2.3.jar
 jars.compile.order = .
 source.. = gen-src/,\
            src/,\
