--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 target/
 bin/
 *.out
+*_trace
 out.*
 out-*.*
 log.*
@@ -10,4 +11,5 @@ log.*
 !db/hbase-0.90.3/bin/
 de.hub.emffrag.testmodels/models/
 apidocs/
+xtend-gen/
 *.xtendbin
